# HilbertSFC

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  benchmark-cpu.md  benchmark-gpu.md  benchmark.md  mkdocs.yml  noxfile.py  pyproject.toml  versions.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/api/2d/: index.html
0.1.0/api/3d/: index.html
0.1.0/api/package/: index.html
0.1.0/api/types/: index.html
0.1.0/quickstart/: index.html
0.1.0/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/api/2d/: index.html
0.2.0/api/3d/: index.html
0.2.0/api/package/: index.html
0.2.0/api/types/: index.html
0.2.0/quickstart/: index.html
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/api/: index.html
0.3.0/api/hilbertsfc/: index.html
0.3.0/api/types/torch-types/: index.html
0.3.0/api/types/types/: index.html
0.3.0/quickstart/: index.html
0.3.0/search/: search_index.json
0.4.0/api/: index.html
0.4.0/api/torch/: index.html
0.4.0/search/: search_index.json
0.4.1/: sitemap.xml
0.4.1/api/hilbertsfc/: index.html
0.4.1/api/torch/: index.html
0.4.1/api/types/torch-types/: index.html
0.4.1/quickstart/: index.html
bench/: README.md  bench_cli.py  hilbert_impls.py  hilbert_impls_2d.py  hilbert_impls_3d.py
bench/hilbert-bench-rs/: Cargo.toml  README.md
bench/hilbert-bench-rs/src/: main.rs
bench/hilbert_bench/: __init__.py  bench.py
bench/hilbert_bench_torch/: bench_cli.py  hilbert_skilling.py  hilbert_skilling_triton.py  plot_results.py
dev/: 404.html  index.html  sitemap.xml
dev/api/2d/: index.html
dev/api/3d/: index.html
dev/api/package/: index.html
dev/api/types/: index.html
dev/quickstart/: index.html
docs/: .markdownlint.jsonc  advanced-usage.md  index.md  quickstart.md
docs/api/: 2d.md  3d.md  hilbertsfc.md  index.md  package.md  torch.md  types.md
docs/api/types/: torch-types.md  torch_types.md  types.md
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/advanced-usage/: index.html
latest/api/: index.html
latest/api/2d/: index.html
latest/api/3d/: index.html
latest/api/hilbertsfc/: index.html
latest/api/package/: index.html
latest/api/torch/: index.html
latest/api/types/: index.html
latest/api/types/torch-types/: index.html
latest/api/types/types/: index.html
latest/quickstart/: index.html
latest/search/: search_index.json
main/: 404.html  index.html  objects.inv  sitemap.xml
main/advanced-usage/: index.html
main/api/: index.html
main/api/2d/: index.html
main/api/3d/: index.html
main/api/hilbertsfc/: index.html
main/api/package/: index.html
main/api/torch/: index.html
main/api/types/: index.html
main/api/types/torch-types/: index.html
main/api/types/types/: index.html
main/quickstart/: index.html
main/search/: search_index.json
notebooks/: hilbertsfc_demo.ipynb  hilbertsfc_demo_script.py  hilbertsfc_performance_deep_dive.ipynb
scripts/: advanced_usage_embed_kernel_bench.py  gen_hilbertsfc_luts.py  render_docs_branding.py  render_readme_visuals.py  test_torch.py
scripts/hilbertsfc_gen/: __init__.py  lut_2d4b.py  lut_2dnb.py  lut_3d2b.py
src/hilbertsfc/: README.md  __init__.py  _cache.py  _dispatch.py  _dtype.py  _flatten.py  _input_checks.py  _luts.py  _nbits.py  _public_api_adapters.py  _public_api_shared.py  _public_api_shared_2d.py  _public_api_shared_3d.py  _public_api_types.py  _typing.py  hilbert2d.py  hilbert2d.pyi  hilbert3d.py  hilbert3d.pyi  morton2d.py  morton2d.pyi  morton3d.py  morton3d.pyi  types.py
src/hilbertsfc/_data/: __init__.py  lut_2d4b_b_qs_u64.npy  lut_2d4b_q_bs_u64.npy  lut_2d4b_sb_sq_u16.npy  lut_2d4b_sq_sb_u16.npy  lut_2d7b_b_qs_u64.npy  lut_2d7b_q_bs_u64.npy  lut_2d7b_sb_sq_u16.npy  lut_2d7b_sq_sb_u16.npy  lut_3d2b_sb_so_u16.npy  lut_3d2b_so_sb_u16.npy
src/hilbertsfc/_kernels/: __init__.py  hilbert2d_decode.py  hilbert2d_encode.py  hilbert3d_decode.py  hilbert3d_encode.py
src/hilbertsfc/_kernels/numba/: __init__.py  hilbert2d_decode.py  hilbert2d_encode.py  hilbert3d_decode.py  hilbert3d_encode.py  morton2d_decode.py  morton2d_encode.py  morton3d_decode.py  morton3d_encode.py
src/hilbertsfc/torch/: __init__.py  _dispatch.py  _dispatch_common.py  _dtypes_int.py  _luts.py  _numpy_interop.py  _public_api_shared_2d.py  _public_api_shared_3d.py  _tensor_int.py  _tuning_mode.py  hilbert2d.py  hilbert3d.py  morton2d.py  morton3d.py  types.py
src/hilbertsfc/torch/_kernels/: __init__.py
src/hilbertsfc/torch/_kernels/torch/: __init__.py  hilbert2d_decode.py  hilbert2d_encode.py  hilbert3d_decode.py  hilbert3d_encode.py  morton2d_decode.py  morton2d_encode.py  morton3d_decode.py  morton3d_encode.py
src/hilbertsfc/torch/_kernels/triton/: __init__.py  _tuning.py  hilbert2d_decode.py  hilbert2d_encode.py  hilbert3d_decode.py  hilbert3d_encode.py  morton2d_decode.py  morton2d_encode.py  morton3d_decode.py  morton3d_encode.py
tests/: conftest.py  test_cache_and_dispatch.py  test_dtype_helpers.py  test_flatten_helpers.py  test_luts_and_cache.py  test_optional_torch_import.py  test_out_buffers.py  test_output_dtype_selection.py  test_parallel_equivalence.py  test_public_api_2d.py  test_public_api_3d.py  test_public_api_morton_2d.py  test_public_api_morton_3d.py  test_shapes_and_strides.py  test_torch_api_validation_2d.py  test_torch_api_validation_3d.py  test_torch_compile.py  test_torch_cpu_correctness.py  test_torch_dispatch_fallbacks.py  test_torch_dispatch_getters.py  test_torch_gpu_triton.py  test_torch_helpers_dispatch_common.py  test_torch_helpers_dtypes_tensor.py  test_torch_helpers_numpy_interop.py  test_torch_luts.py  test_torch_morton.py  test_torch_public_exports.py
