[project]
name = "hilbertsfc"
version = "0.4.0"
description = "Ultra-fast 2D and 3D Hilbert space-filling curve encode/decode kernels (NumPy/Numba + PyTorch/Triton)."
readme = "README.md"
authors = [{ name = "Remco Leijenaar" }]
requires-python = ">=3.12"
dependencies = ["numba>=0.59.0", "numpy>=1.26.0"]
license = "MIT"
license-files = ["LICENSE"]

keywords = [
    "hilbert",
    "space-filling-curve",
    "sfc",
    "numba",
    "numpy",
    "indexing",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://remcofl.github.io/HilbertSFC/"
Source = "https://github.com/remcofl/HilbertSFC"
Documentation = "https://remcofl.github.io/HilbertSFC/"
Issues = "https://github.com/remcofl/HilbertSFC/issues"

[project.optional-dependencies]
torch = ["torch>=2.5.0"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
bench = [
    "hilbert-bytes==0.6.0",
    "hilbertcurve==2.0.5",
    "numpy-hilbert-curve==1.0.1",
]
dev = [
    { include-group = "test" },
    { include-group = "typecheck" },
    "prek>=0.3.1",
    "ruff>=0.15.0",
    "nox>=2025.11.12",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.6.0",
    "mkdocstrings[python]>=0.30.0",
    "mike>=2.1.4",
    "pymdown-extensions>=10.14.0",
    "ruff>=0.15.0",
]
notebooks = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "rich>=14.3.2",
    "numpy>=2.3.5",
    "pandas>=3.0.1",
]
scripts = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pillow>=12.1.0",
    "rich>=14.3.2",
]
runtime-min = ["numpy==1.26.0", "numba==0.59.0"]
test = ["pytest>=9.0.2", "pytest-cov>=7.1.0", "pytest-xdist>=3.8.0"]
torch-cpu = ["torch>=2.11.0"]
torch-cpu-min = ["torch==2.5.0"]
torch-cu118-min = ["torch==2.5.0"]
torch-cu130 = ["torch>=2.11.0"]
torch-rocm = ["torch>=2.11.0", "triton-rocm==3.6.0"]
typecheck = ["pyright>=1.1.408", "pyrefly>=0.51.0", "ty>=0.0.15"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "NPY", "UP"]
ignore = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ty]
src.include = ["src", "tests", "scripts", "notebooks"]

[tool.pyright]
include = ["src", "tests", "scripts", "notebooks"]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pyrefly]
project-includes = ["src", "tests", "scripts", "notebooks"]
python-version = "3.12.0"
infer-with-first-use = false

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "slow: exhaustive tests that may take longer (deselect with '-m \"not slow\"')",
    "torch: tests for hilbertsfc.torch frontend",
    "compile: tests covering torch.compile compatibility",
    "no_graph_break: stricter torch.compile(fullgraph=True) tests",
    "gpu: tests requiring a CUDA-capable GPU",
    "triton: tests requiring Triton backend",
]
filterwarnings = [
    # PyTorch emits a DeprecationWarning from torch.jit._script on import.
    "ignore:.*torch\\.jit\\.script_method.*:DeprecationWarning:torch\\.jit\\._script",
]

[tool.uv]
exclude-newer = "20 days"
exclude-newer-package = { "torch" = false, "triton-rocm" = false }
conflicts = [
    [
        { group = "torch-cpu" },
        { group = "torch-cpu-min" },
        { group = "torch-cu118-min" },
        { group = "torch-cu130" },
        { group = "torch-rocm" },
    ],
    [
        { group = "runtime-min" },
        { group = "notebooks" },
    ],
    [
        { group = "runtime-min" },
        { group = "scripts" },
    ],
    [
        { group = "runtime-min" },
        { group = "bench" },
    ],
]
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", group = "torch-cpu" },
    { index = "pytorch-cpu", group = "torch-cpu-min" },
    { index = "pytorch-cu118", group = "torch-cu118-min" },
    { index = "pytorch-cu130", group = "torch-cu130" },
    { index = "pytorch-rocm", group = "torch-rocm" },
]
triton-rocm = [{ index = "pytorch-rocm", group = "torch-rocm" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
